<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <kotlin.version>2.1.21</kotlin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.5.3</spring-boot.version>
    </properties>
    <groupId>st.orm</groupId>
    <artifactId>storm-framework</artifactId>
    <version>1.4.0</version>
    <packaging>pom</packaging>
    <name>Storm Framework</name>
    <description>A SQL Template and ORM framework, focusing on modernizing and simplifying database programming.</description>
    <url>https://github.com/storm-repo/storm-framework</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Leon van Zantvoort</name>
            <email>storm@zantvoort.biz</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/storm-repo/storm-framework.git</connection>
        <developerConnection>scm:git:ssh://github.com/storm-repo/storm-framework.git</developerConnection>
        <url>https://github.com/storm-repo/storm-framework/</url>
    </scm>
    <modules>
        <module>storm-metamodel-processor</module>
        <module>storm-foundation</module>
        <module>storm-core</module>
        <module>storm-json</module>
        <module>storm-oracle</module>
        <module>storm-mysql</module>
        <module>storm-mariadb</module>
        <module>storm-postgresql</module>
        <module>storm-mssqlserver</module>
        <module>storm-spring</module>
        <module>storm-java21</module>
        <module>storm-kotlin</module>
        <module>storm-kotlin-spring</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>24.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <phase>package</phase>
                            <configuration>
                                <classifier>javadoc</classifier>
                                <failOnError>true</failOnError>
                                <doclint>none</doclint>
                                <source>${java.version}</source>
                                <additionalJOption>--enable-preview</additionalJOption>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <classifier>sources</classifier>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <gpgArguments>
                                <arg>--armor</arg>
                                <arg>--batch</arg>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.sonatype.central</groupId>-->
<!--                <artifactId>central-publishing-maven-plugin</artifactId>-->
<!--                <version>0.7.0</version>-->
<!--                <extensions>true</extensions>-->
<!--                <configuration>-->
<!--                    <publishingServerId>central</publishingServerId>-->
<!--                    <autoPublish>true</autoPublish>-->
<!--                    <waitUntil>uploaded</waitUntil>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>
